--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Hello World! 👋</h1>
-    <h2>I'm Sam 😎, I love to write code 💻</h2>
+    <h2>I'm Sam 😎, I love coding. 💻</h2>
 </body>
 </html>
